@@ -16,10 +16,10 @@
  * This is the model class for table "<?php echo $tableName; ?>".
  *
  * The followings are the available columns in table '<?php echo $tableName; ?>':
- <?php foreach($columns as $column): ?>
-* @property <?php echo $column->type.' $'.$column->name."\n"; ?>
- <?php endforeach; ?>
-*/
+<?php foreach($columns as $column): ?>
+ * @property <?php echo $column->type.' $'.$column->name."\n"; ?>
+<?php endforeach; ?>
+ */
 class <?php echo $className; ?> extends CActiveRecord
 {
 	/**
